[tool.poetry]
name = "expansion"
version = "0.1.0"
description = ""
authors = ["D. Lowl <d.lowl@d-lowl.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.227"
torch = "2.0.1+cpu"
exceptiongroup = "^1.1.2"
transformers = "^4.30.2"
accelerate = "^0.20.3"
vadersentiment = "^3.3.2"
loguru = "^0.7.0"
python-socketio = "^5.8.0"
sanic = "^23.3.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
